# queertone

./: .gitignore  .gitmodules  README.md
flext-externals/: CMakeLists.txt
flext-externals/counter/: CMakeLists.txt  cppcounter.pd  main.cpp
flext-externals/simple1/: .gitignore  CMakeLists.txt  make-rules.txt  package.txt
flext-externals/thread1/: CMakeLists.txt
flext-externals/thread2/: CMakeLists.txt
nn_tilde_models/: LinearPred.py  README.md  lin-pred.ts  linear-pred.py
nn_tilde_models/runs/: best-lin-pred-dict.pt  best-lin-pred.pt
pd-external-tests/: CMakeLists.txt  Makefile  build.sh  ccounter.c  complex-counter.c  counter.c  helloworld.c  minimal.c
